0.4.2
-----

- We require Python 2.7 or 3.5 and newer now


0.4.1
-----

- Avoid fetching a connection from the pool when the result is cached.
  This should improve the performance, particularly when the connection
  pool is not working properly for some reason. Thanks to Daniel Nilsson.
- Improved and documented the sample application


0.4
---

- Made pyramid_ldap3 compatible with Pyramid 1.10
- We require Pyramid >= 1.4 now


0.3.2
-----

- The login value in the search filter is now properly escaped in the
  authenticate() method. Although the bind test in the second stage of the
  method ensures the proper password is passed, this could be exploited
  to login with a different user name like 'foo*' instead of 'foobar'.
  Thanks to Patrick Valsecchi for the bug report.


0.3.1
-----

- Since ldap3 version 2.0.7, schema information is loaded from the server on
  every connection. This is normally not needed for authentication and slows
  down the connections, so we now disable this feature. If you fetch user or
  group attributes and want them to be properly formatted, you must enable this
  feature by setting get_info to 'SCHEMA' or 'ALL' when calling ldap_setup().


0.3
---

- Adaptations to changes in ldap3 version 2, including changed constant names.
- This version is intended to support the newer ldap3 versions >= 2.0 only.


0.2.5
-----

- Explicitly requires ldap3 < version 2.0 for compatibility reasons.
- This version is intended to support the older ldap3 versions < 2.0 only.


0.2.4
-----

- The pool lifetime is now configurable


0.2.3
-----

- Account for renaming of python3-ldap to ldap3
- Proper unbinding of Connections
- Do not fill cache if caching has been disabled
- Release as source package and universal wheel


0.2.2
------

- Support server pools
- Ignore results without a dn instead of raising an error
- Escape special characters when querying for groups
- Do not cache invalid responses
- Added documentation on recursive group queries

