@@ -30,23 +30,23 @@ class TestConnector(TestCase):
         manager = DummyManager()
         inst = self._makeOne(None, manager)
         self.assertRaises(ConfigurationError, inst.authenticate, None, None)
-        self.assertTrue(manager.bound is None)
+        self.assertIsNone(manager.bound)
 
     def test_authenticate_search_returns_no_result(self):
         manager = DummyManager()
         registry = Dummy()
         registry.ldap_login_query = DummySearch([])
         inst = self._makeOne(registry, manager)
-        self.assertTrue(inst.authenticate(None, None) is None)
-        self.assertTrue(manager.bound is None)
+        self.assertIsNone(inst.authenticate(None, None))
+        self.assertIsNone(manager.bound)
 
     def test_authenticate_empty_password(self):
         manager = DummyManager()
         registry = Dummy()
         registry.ldap_login_query = DummySearch([('a', 'b')])
         inst = self._makeOne(registry, manager)
-        self.assertTrue(inst.authenticate('foo', '') is None)
-        self.assertTrue(manager.bound is None)
+        self.assertIsNone(inst.authenticate('foo', ''))
+        self.assertIsNone(manager.bound)
 
     def test_authenticate_search_returns_one_result(self):
         manager = DummyManager()
@@ -54,15 +54,15 @@ class TestConnector(TestCase):
         registry.ldap_login_query = DummySearch([('a', 'b')])
         inst = self._makeOne(registry, manager)
         self.assertEqual(inst.authenticate(None, None), ('a', 'b'))
-        self.assertTrue(manager.bound is False)
+        self.assertIs(manager.bound, False)
 
     def test_authenticate_search_returns_multiple_results(self):
         manager = DummyManager()
         registry = Dummy()
         registry.ldap_login_query = DummySearch([('a', 'b'), ('a', 'c')])
         inst = self._makeOne(registry, manager)
-        self.assertTrue(inst.authenticate(None, None) is None)
-        self.assertTrue(manager.bound is None)
+        self.assertIsNone(inst.authenticate(None, None))
+        self.assertIsNone(manager.bound)
 
     def test_authenticate_search_bind_raises(self):
         from pyramid_ldap3 import LDAPException
@@ -70,8 +70,8 @@ class TestConnector(TestCase):
         registry = Dummy()
         registry.ldap_login_query = DummySearch([('a', 'b')])
         inst = self._makeOne(registry, manager)
-        self.assertTrue(inst.authenticate(None, None) is None)
-        self.assertTrue(manager.bound is None)
+        self.assertIsNone(inst.authenticate(None, None))
+        self.assertIsNone(manager.bound)
 
     def test_authenticate_search_escapes(self):
         manager = DummyManager()
@@ -89,13 +89,13 @@ class TestConnector(TestCase):
         self.assertEqual(search.kw['login'].encode('latin-1'), b'ab\xe7123')
         self.assertEqual(inst.authenticate(b'ab\xe7123', None), ('a', 'b'))
         self.assertEqual(search.kw['login'], '\\61\\62\\e7\\31\\32\\33')
-        self.assertTrue(manager.bound is False)
+        self.assertIs(manager.bound, False)
 
     def test_user_groups_no_ldap_groups_query(self):
         manager = DummyManager()
         inst = self._makeOne(None, manager)
         self.assertRaises(ConfigurationError, inst.user_groups, None)
-        self.assertTrue(manager.bound is None)
+        self.assertIsNone(manager.bound)
 
     def test_user_groups_search_returns_result(self):
         manager = DummyManager()
@@ -103,7 +103,7 @@ class TestConnector(TestCase):
         registry.ldap_groups_query = DummySearch([('a', 'b')])
         inst = self._makeOne(registry, manager)
         self.assertEqual(inst.user_groups(None), [('a', 'b')])
-        self.assertTrue(manager.bound is None)
+        self.assertIsNone(manager.bound)
 
     def test_user_groups_execute_raises(self):
         from pyramid_ldap3 import LDAPException
@@ -112,8 +112,8 @@ class TestConnector(TestCase):
         registry.ldap_groups_query = DummySearch(
             [('a', 'b')], LDAPException)
         inst = self._makeOne(registry, manager)
-        self.assertTrue(inst.user_groups(None) is None)
-        self.assertTrue(manager.bound is None)
+        self.assertIsNone(inst.user_groups(None))
+        self.assertIsNone(manager.bound)
 
     def test_user_groups_search_escapes(self):
         manager = DummyManager()
@@ -129,4 +129,4 @@ class TestConnector(TestCase):
         self.assertEqual(search.kw['userdn'].encode('latin-1'), b'ab\xe7123')
         self.assertEqual(inst.user_groups(b'ab\xe7123'), [('a', 'b')])
         self.assertEqual(search.kw['userdn'], '\\61\\62\\e7\\31\\32\\33')
-        self.assertTrue(manager.bound is None)
+        self.assertIsNone(manager.bound)
