@@ -12,11 +12,10 @@ class TestLdapSetGroupsQuery(TestCase):
         config = DummyConfig()
         self._callFUT(config, 'dn', 'tmpl')
         ldap_groups_query = getattr(config.registry, 'ldap_groups_query', None)
-        self.assertFalse(ldap_groups_query is None)
+        self.assertIsNotNone(ldap_groups_query)
         self.assertEqual(ldap_groups_query.base_dn, 'dn')
         self.assertEqual(ldap_groups_query.filter_tmpl, 'tmpl')
-        self.assertEqual(
-            ldap_groups_query.scope, ldap3.SUBTREE)
+        self.assertEqual(ldap_groups_query.scope, ldap3.SUBTREE)
         self.assertEqual(ldap_groups_query.cache_period, 0)
 
 
@@ -31,9 +30,8 @@ class TestLdapSetLoginQuery(TestCase):
         config = DummyConfig()
         self._callFUT(config, 'dn', 'tmpl')
         ldap_login_query = getattr(config.registry, 'ldap_login_query', None)
-        self.assertFalse(ldap_login_query is None)
+        self.assertIsNotNone(ldap_login_query)
         self.assertEqual(ldap_login_query.base_dn, 'dn')
         self.assertEqual(ldap_login_query.filter_tmpl, 'tmpl')
-        self.assertEqual(
-            ldap_login_query.scope, ldap3.LEVEL)
+        self.assertEqual(ldap_login_query.scope, ldap3.LEVEL)
         self.assertEqual(ldap_login_query.cache_period, 0)
